<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityClasses.MainActivity">

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Сhoose_your_login_option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/btnSick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_background_sick"
        android:text="@string/Sick"
        app:layout_constraintEnd_toEndOf="@+id/tvChoose"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="@+id/tvChoose"
        app:layout_constraintTop_toBottomOf="@+id/tvChoose" />

    <Button
        android:id="@+id/btnStaff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_background_staff"
        android:text="@string/Staff"
        app:layout_constraintEnd_toEndOf="@+id/btnSick"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSick"
        app:layout_constraintTop_toBottomOf="@+id/btnSick" />

    <ImageView
        android:id="@+id/ivHospital"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/znac_hospital"
        app:layout_constraintEnd_toStartOf="@+id/tvChoose"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>